# c-project-template

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
include/: adder.h
lib/utils/: CMakeLists.txt
lib/utils/include/: bit_utils.h  print_utils.h
lib/utils/src/: bit_utils.c  print_utils.c
src/: CMakeLists.txt  adder.c  main.c
test/: CMakeLists.txt  test_add.cpp
